# dw1000

./: .gitignore  README.md
example/zephyr/nordic/basic/: README.md
example/zephyr/nordic/basic/board/: nrf52840dk.overlay
example/zephyr/nordic/basic/src/: main.c
example/zephyr/nordic/verify_communication/: CMakeLists.txt  README_en.md  prj.conf
example/zephyr/nordic/verify_communication/inc/: hal_spi.h  main.h
example/zephyr/nordic/verify_communication/src/: hal_spi.c  main.c
inc/: dw1000.h  dw1000_const.h  dw1000_dbg.h  dw1000_hw.h  dw1000_reg.h
src/: dw1000.c  dw1000_dbg.c  dw1000_hw.c
